# LeadForge

./: .env.dev  .env.dev.backup  .env.dev.example  .env.prod.example  .gitignore  INTEGRATION_SUMMARY.md  Makefile  OUTREACH_INTEGRATION_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  init-db.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/core/: config.py
backend/app/tools/: google_maps_search.py
builder/: .gitignore  Dockerfile  pyproject.toml
builder/app/: __init__.py
builder/app/agents/: __init__.py  information_scraper_node.py  page_screenshotter_node.py  prompt_generator_node.py  website_builder_node.py  workflow.py
builder/app/api/: __init__.py  state.py  workflow.py
builder/app/core/: config.py  database.py
builder/app/crud/: __init__.py  state.py
builder/app/models/: __init__.py  page_scraped.py  page_screenshot.py  state.py
builder/app/schemas/: __init__.py  information_scraper.py  page_screenshotter.py  state.py  visual_analysis.py  website_coder.py
builder/app/tools/: __init__.py  information_scraper.py  page_screenshotter.py  scrape_information.py  website_coder.py
deployer/: Dockerfile  pyproject.toml
deployer/app/: __init__.py  api.py  config.py  crud.py  database.py  models.py  schemas.py
deployer/app/core/: __init__.py  config.py
deployer/deployed/test/: index.html
deployer/sites/78175419-0c3b-42f9-9880-4e33df3a45a0/: index.html  script.js  style.css
frontend/: .gitignore  Dockerfile  EMAIL_SETUP.md  EMAIL_SETUP_GUIDE.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Badge.tsx  Button.tsx  CampaignForm.tsx  (+7 more)
leads/: .gitignore  Dockerfile  pyproject.toml
leads/app/: __init__.py
leads/app/agents/: analyze_leads.py  analyze_leads_node.py  credentials.json  email_agent.py  lead_generator.py  lead_generator_node.py  meet.py  token.json  workflow.py
leads/app/api/: __init__.py  lead.py  state.py  workflow.py
leads/app/core/: __init__.py  config.py  database.py
leads/app/crud/: __init__.py  lead.py  state.py  workflow.py
leads/app/models/: __init__.py  lead.py  state.py  visual_analysis.py  workflow.py
leads/app/schemas/: __init__.py  contact_scraper.py  google_maps_search.py  lead.py  state.py  visual_analysis.py  workflow.py
leads/app/tools/: __init__.py  contact_scraper.py  google_maps_search.py  visual_analysis.py
outreach/: .gitignore  Dockerfile  pyproject.toml
outreach/app/: __init__.py
outreach/app/agents/: draft_email_node.py  save_intermediate_state_node.py  send_mail_node.py  start_phone_call_node.py  workflow.py
outreach/app/api/: __init__.py  mail.py  phone.py  state.py  workflow.py
outreach/app/core/: __init__.py  config.py
outreach/app/crud/: __init__.py  mail.py  state.py
outreach/app/models/: __init__.py  mail.py  state.py
outreach/app/schemas/: __init__.py  mail.py  phone.py  state.py
outreach/app/tools/: __init__.py  mail.py  meet.py  phone.py  transcribe.py
(+11 files in other folders)
