[project]
name = "leads"
version = "0.1.0"
description = "Agent to generate leads"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi[all]>=0.119.1",
    "googlemaps>=4.10.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "loguru>=0.7.3",
    "playwright>=1.55.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.3",
    "uvicorn>=0.37.0",
]
