[project]
name = "outreach"
version = "0.1.0"
description = "Agent for email and phone outreach"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.120.0",
    "google-api-python-client>=2.185.0",
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]
